--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "eject": "react-scripts eject",
     "start": "node api/server.js",
     "server": "nodemon api/server.js",
-    "dev": "concurrently 'npm run server' 'npm run client'",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
+    "dev": "concurrently 'npm run server' 'npm run client'"
   },
   "engines": {
     "node": "15.4.0"
