--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react-scroll-to-bottom": "^4.0.0",
     "resolve-url-loader": "^3.1.2",
     "socket.io": "^3.0.5",
-    "socket.io-client": "^2.3.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -57,5 +56,5 @@
     "nodemon": "^2.0.7",
     "sass": "^1.29.0"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000/"
 }
